@@ -1,6 +1,11 @@
 SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)
 SET(CTEST_SOURCE_DIRECTORY "${CTEST_SCRIPT_DIRECTORY}/..")
 SET(CTEST_BINARY_DIRECTORY "${CTEST_SOURCE_DIRECTORY}")
+STRING(REPLACE "/test/.." "" CTEST_HOME_DIR "${CTEST_SOURCE_DIRECTORY}")
+LIST(INSERT CMAKE_MODULE_PATH 0 ${CTEST_HOME_DIR}/Modules)
+INCLUDE(ManageEnvironmentCommon)
+SET(CMAKE_FEDORA_TMP_DIR "${CTEST_HOME_DIR}/NO_PACK")
+
 #SET(CTEST_COMMAND "${CTEST_EXECUTABLE_NAME}")
 IF(NOT DEFINED CTEST_COMMAND)
     SET(CTEST_COMMAND "echo 'Tests passed'")
@@ -17,8 +22,6 @@ FUNCTION(TEST_STR_MATCH var expected)
     ENDIF()
 ENDFUNCTION()
 
-STRING(REPLACE "/test/.." "" CTEST_HOME_DIR "${CTEST_SOURCE_DIRECTORY}")
-SET(CMAKE_FEDORA_TMP_DIR "${CTEST_HOME_DIR}/NO_PACK")
 IF(NOT EXISTS ${CMAKE_FEDORA_TMP_DIR})
     FILE(MAKE_DIRECTORY ${CMAKE_FEDORA_TMP_DIR})
 ENDIF(NOT EXISTS ${CMAKE_FEDORA_TMP_DIR})
