@@ -1,3 +1,10 @@
+* Mon Aug 25 2014 Ding-Yi Chen <dchen at redhat.com> - 2.2.1
+- ManageEnvironmentCommon: Module of variable for both normal and script mode.
+- ManageDependency: Make changes suitable for more generic *nix build.
+    e.g. FEDORA_NAME -> PACKAGE_NAME
+- ManageZanata: MANAGE_ZANATA: New option CLEAN_ZANATA_XML.
+- Workaround for Bug 1115136, otherwise el7 won't work.
+
 * Tue Aug 19 2014 Ding-Yi Chen <dchen at redhat.com> - 2.2.0
 - ManageDependency: Make changes suitable for more generic *nix build.
     e.g. FEDORA_NAME -> PACKAGE_NAME
